<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.shekhchilli.coffeeshop.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/name_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:imeActionLabel="Done"
            android:inputType="textCapWords"
            android:maxLength="20"
            android:maxLines="1"
            android:textColor="@android:color/black"
            />


        <TextView
            android:text="@string/toppings"
            style="@style/CustomText"/>
        <CheckBox
            android:id="@+id/Cream_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cream" />

        <CheckBox
            android:id="@+id/chocolate_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chocolate" />

        <TextView
            style="@style/CustomText"
            android:text="@string/quantity"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:id="@+id/decrement_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                style="@style/CustomButton"
                android:text="-" />

            <TextView
                android:id="@+id/quantity_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="1"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/increment_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                style="@style/CustomButton"
                android:text="+" />

        </LinearLayout>

        <TextView
            style="@style/CustomText"
            android:text="@string/order_summary"/>


        <TextView
            android:id="@+id/ordersummary_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"/>

        <Button
            android:id="@+id/order_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            style="@style/CustomButton"
            android:text="@string/order"
            />
    </LinearLayout>



</ScrollView>